CONTINUE Changing events from Token and Zone; needs a more robust foundation